project("SurfaceReconstruction")
cmake_minimum_required(VERSION 3.0)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_executable(PoissonRecon src/PoissonRecon.cpp)
target_include_directories(PoissonRecon PRIVATE "${PROJECT_SOURCE_DIR}")
target_compile_features(PoissonRecon PRIVATE cxx_std_17)
target_link_libraries(PoissonRecon PRIVATE jpeg png z Threads::Threads)
set_target_properties(PoissonRecon PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

add_executable(SSDRecon src/SSDRecon.cpp)
target_include_directories(SSDRecon PRIVATE "${PROJECT_SOURCE_DIR}")
target_compile_features(SSDRecon PRIVATE cxx_std_17)
target_link_libraries(SSDRecon PRIVATE jpeg png z Threads::Threads)
set_target_properties(SSDRecon PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

add_executable(AdaptiveTreeVisualization src/AdaptiveTreeVisualization.cpp)
target_include_directories(AdaptiveTreeVisualization PRIVATE "${PROJECT_SOURCE_DIR}")
target_compile_features(AdaptiveTreeVisualization PRIVATE cxx_std_17)
target_link_libraries(AdaptiveTreeVisualization PRIVATE jpeg png z Threads::Threads)
set_target_properties(AdaptiveTreeVisualization PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

add_executable(EDTInHeat src/EDTInHeat.cpp)
target_include_directories(EDTInHeat PRIVATE "${PROJECT_SOURCE_DIR}")
target_compile_features(EDTInHeat PRIVATE cxx_std_17)
target_link_libraries(EDTInHeat PRIVATE jpeg png z Threads::Threads)
set_target_properties(EDTInHeat PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

add_executable(ImageStitching src/ImageStitching.cpp)
target_include_directories(ImageStitching PRIVATE "${PROJECT_SOURCE_DIR}")
target_compile_features(ImageStitching PRIVATE cxx_std_17)
target_link_libraries(ImageStitching PRIVATE jpeg png z Threads::Threads)
set_target_properties(ImageStitching PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

add_executable(PointInterpolant src/PointInterpolant.cpp)
target_include_directories(PointInterpolant PRIVATE "${PROJECT_SOURCE_DIR}")
target_compile_features(PointInterpolant PRIVATE cxx_std_17)
target_link_libraries(PointInterpolant PRIVATE jpeg png z Threads::Threads)
set_target_properties(PointInterpolant PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

add_executable(SurfaceTrimmer src/SurfaceTrimmer.cpp)
target_include_directories(SurfaceTrimmer PRIVATE "${PROJECT_SOURCE_DIR}")
target_compile_features(SurfaceTrimmer PRIVATE cxx_std_17)
target_link_libraries(SurfaceTrimmer PRIVATE jpeg png z Threads::Threads)
set_target_properties(SurfaceTrimmer PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

add_executable(ChunkPLY src/ChunkPLY.cpp)
target_include_directories(ChunkPLY PRIVATE "${PROJECT_SOURCE_DIR}")
target_compile_features(ChunkPLY PRIVATE cxx_std_17)
target_link_libraries(ChunkPLY PRIVATE jpeg png z Threads::Threads)
set_target_properties(ChunkPLY PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
